button to join game from create_or_join

--- a/app/views/games/create_or_join.html.erb
+++ b/app/views/games/create_or_join.html.erb
@@ -1,8 +1,14 @@
 <div class="row mb-3">
   <div class="col-md-12">
-    <h1>
-      Create a game
-    </h1>
+    <h1>Join a game</h1>
+
+    <form action="/join_game" method="post">
+      <div class="form-group">
+        <label for="passcode_box">Passcode</label>
+        <input type="text" id="passcode_box" name="query_passcode" class="form-control" >
+      </div>
+    </form>
+
   </div>
 </div>
 
@@ -11,7 +17,7 @@
 <div class="row mb-3">
   <div class="col-md-12">
     <h1>
-      Join a game
+      Create a new game
     </h1>
   </div>
 </div>
