join game path up to 'before we begin'

--- a/app/views/games/create_or_join.html.erb
+++ b/app/views/games/create_or_join.html.erb
@@ -16,8 +16,6 @@
 
 <div class="row mb-3">
   <div class="col-md-12">
-    <h1>
-      Create a new game
-    </h1>
+    <h1>Create a new game</h1>
   </div>
 </div>
