--- a/app/views/games/before_we_begin.html.erb
+++ b/app/views/games/before_we_begin.html.erb
@@ -13,11 +13,13 @@
     <ol>
       <li>House rule: Don't be a dick. Successfully cheating is not an accomplishment.</li>
       <li>Set your browser to auto-refresh</li>
-        <ol type = "a">
+        <ul>
           <li>
             Add an auto-refresh extension to your browser (<a href="https://chrome.google.com/webstore/detail/auto-refresh/ifooldnmmcmlbdennkpdnlnbgbmfalko?hl=en" target="_blank">for Chrome users</a>)
           </li>
-        <ol>
+          <li>The linked auto-refresh extension for Chrome will only refresh this tab</li>
+          <li>Set your refresh for every 15 seconds, or faster if you prefer</li>
+        <ul>
     </ol>
 
     <br>
