--- a/app/views/players/edit_profile_with_errors.html.erb
+++ b/app/views/players/edit_profile_with_errors.html.erb
@@ -1,47 +1,48 @@
 <div >
-  <h5>
+  <h1>
     Edit Player Account
-  </h5>
+  </h1>
 
   <% if @player.errors.any? %>
-  <% @player.errors.full_messages.each do |message| %>
-    <div class="alert">
-      <%= message %>
-    </div>
+    <% @player.errors.full_messages.each do |message| %>
+      <div class="alert" style="color:red">
+        <%= message %>
+      </div>
+    <% end %>
   <% end %>
-  <% end %>
+
   <div>
     <form action="/modify_player" method="post">
-              
       <div>
         <label for="email_box">Email</label>
-          
         <input id="email_box" name="query_email" value="<%= @current_player.email %>">
-          
       </div>
-                                    
       <div>
         <label for="name_box">Name</label>
-          
         <input id="name_box" name="query_name" value="<%= @current_player.name %>">
-          
       </div>
-                      
+
+<br>
+
       <div>
         <label for="image_box">Image</label>
-          
-        <input id="image_box" name="query_image" value="<%= @current_player.image %>">
-          
+        <input id="image_box" name="query_image" value="<%= @current_player.image %>" style="width:100%">
       </div>
-              
+
+      <div>
+        <p>Current image:</p>
+        <img src="<%= @current_player.image %>" height=100>
+      </div>
+      <br>
+
       <div>
         <label for="password_box">Password</label>
-        <input id="password_box" name="query_password" placeholder="Choose a new password..." type="password">
+        <input id="password_box" name="query_password" placeholder="Choose a password..." type="password">
       </div>
     
       <div>
         <label for="password_confirmation_box">Password Confirmation</label>
-        <input id="password_confirmation_box" name="query_password_confirmation" placeholder="Confirm your new password..." type="password">
+        <input id="password_confirmation_box" name="query_password_confirmation" placeholder="Confirm your password..." type="password">
       </div>
 
       <button>
