--- a/app/views/games/before_we_begin.html.erb
+++ b/app/views/games/before_we_begin.html.erb
@@ -73,6 +73,22 @@
             </form>
           <%end%>
 
+          <br>
+
+        <div class="col">
+          <a href="/start_the_game" class="btn btn-block btn-outline-secondary"
+            style="color:black;
+              font-size: 30px;
+              vertical-align:middle;
+              height: 300px;
+              width: 300px;
+              border-radius: 50%;
+              background-size:100%;
+              background-image:url('https://www.pokerchips.com/media/catalog/product/cache/1/image/1000x1000/9df78eab33525d08d6e5fb8d27136e95/6/-/6-stripe-dice-red-poker-chips.jpg')">
+            The gang's all here, let's begin!
+          </a>
+        </div>
+
       <%end%>
     </div>
 
