--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,15 +9,19 @@
     </button>
 
     <div class="collapse navbar-collapse" id="collapsible-nav-links">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Resources
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          </div>
-        </li>
-      </ul>
+    
+    <% @player = Player.where({ :id => session.fetch(:player_id)}).at(0)%>
+    <%if @player%>
+      <ul class="navbar-nav"><li class="nav-item"><a class="nav-link" href="/create_or_join">  Join or Create a Game</a></li></ul>
+      <ul class="navbar-nav"><li class="nav-item"><a class="nav-link" href="/edit_player_profile">  Edit your Profile</a></li></ul>
+      <ul class="navbar-nav"><li class="nav-item"><a class="nav-link" href="/player_sign_out">  Sign Out</a></li></ul>
+    <%else%>
+      <ul class="navbar-nav"><li class="nav-item"><a class="nav-link" href="/player_sign_in">  Sign In</a></li></ul>
+      <ul class="navbar-nav"><li class="nav-item"><a class="nav-link" href="/player_sign_up">  Sign Up</a></li></ul>
+    <%end%>
+
+
+
     </div> <!-- .navbar-collapse -->
   </div> <!-- .container -->
 </nav>
