--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>
-    FinalProject
+    Deck of Cards
   </title>
 
   <!-- Expand the number of characters we can use in the document beyond basic ASCII 🎉 -->
