updated Instructions message on before_we_begin to be less self-deprecating

--- a/app/views/games/before_we_begin.html.erb
+++ b/app/views/games/before_we_begin.html.erb
@@ -13,8 +13,6 @@
 
     <h4>Instructions</h4>
 
-    <p>There is a reason this website is free and someone with limited experience could create it in a week. Follow these instructions:</p>
-
     <ol>
       <li>House rule: Don't be a dick. Successfully cheating is not an accomplishment.</li>
       <li>Set your browser to auto-refresh
@@ -30,7 +28,7 @@
       <li>Let me know what's not working well</li>
     </ol>
 
-    <p>Erica, Master of Games</p>
+    <p>Erica and Grant, Masters of Games</p>
 
     <br>
 
