--- a/app/views/games/table_top.html.erb
+++ b/app/views/games/table_top.html.erb
@@ -1,7 +1,8 @@
 <body style="background-color:#35654d; color:white;">
   <div class="row mb-2">
     <div class="col-md-3">
-      <form action="/new_hand?game_id=<%= @game.id %>" method="post">
+      <form action="/new_hand?game_id=<%= @game.id %>" method="post"
+        onsubmit="return confirm('Deal new hand?');">
         <button>
           Deal New Hand
         </button>
@@ -75,7 +76,7 @@
 
   <div class="row mb-2">
     <div class="col-md-12">
-      <form action="/fold" method="post">
+      <form action="/fold" method="post" onsubmit="return confirm('Are you sure you want to fold?');">
         <button>
           Fold
         </button>
