add action on tracker to table

--- a/app/views/games/before_we_begin.html.erb
+++ b/app/views/games/before_we_begin.html.erb
@@ -80,7 +80,7 @@
             <br>
 
             <div style="">
-              <a href="/table_top/<%=@current_game.id%>" class="btn btn-block btn-outline-secondary" style="
+              <a href="/begin_play/<%=@current_game.id%>" class="btn btn-block btn-outline-secondary" style="
                   background-color:red;
                   color:white;
                   font-size:30px;">
