--- a/app/views/games/table_top.html.erb
+++ b/app/views/games/table_top.html.erb
@@ -72,7 +72,7 @@
     </tr>
     <tr>
     <% @players.each do |player| %>
-      <td><%= player.name %></td>
+      <td style="text-align:center;border:<%= player.seat == @game.action_on ? '1' : '0' %>px solid;"><%= player.name %></td>
       <td></td>
     <% end %>
     </tr>
@@ -82,7 +82,28 @@
   <hr>
 
   <div class="row mb-2">
-    <div class="col-md-12">
+    <div class="col-md-3">
+      <form action="/fold" method="post" onsubmit="return confirm('Are you sure you want to fold?');">
+        <button>
+          Check
+        </button>
+      </form>
+    </div>
+    <div class="col-md-3">
+      <form action="/fold" method="post" onsubmit="return confirm('Are you sure you want to fold?');">
+        <button>
+          Call
+        </button>
+      </form>
+    </div>
+    <div class="col-md-3">
+      <form action="/fold" method="post" onsubmit="return confirm('Are you sure you want to fold?');">
+        <button>
+          Raise
+        </button>
+      </form>
+    </div>
+    <div class="col-md-3">
       <form action="/fold" method="post" onsubmit="return confirm('Are you sure you want to fold?');">
         <button>
           Fold
